--- a/netflix.css
+++ b/netflix.css
@@ -8,6 +8,7 @@
     background-image: url("netflix-background.jpg");
     background-size: cover;
     width: 100%;
+    overflow:hidden;
 }
 .border{
     height: 20px;
